# EVRP-TW-DeepRL

./: .gitignore  LICENSE  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: ci.yml
configs/experiment/: greedy_small.yaml
configs/problem/: small.yaml
data/: README.md
data/samples/: tiny_evrptw.json
docs/: experiment_plan.md  experiment_protocol.md  problem_formulation.md  project_proposal.md
docs/paper_notes/: EVRP_overview.md  RL_for_routing.md  SOTA_summary.md  VRPTW_basics.md
docs/weekly_logs/: week1.md  week2.md  week3.md
docs/weekly_logs/week1/: Week1_Research_Log.md  environment_record.md
experiments/: run_greedy_benchmark.py
experiments/configs/: baseline.yaml  ppo.yaml  reinforce.yaml  smoke.yaml
scripts/: evaluate.py  train.py  verify_environment.py  visualize_routes.py
src/: __init__.py  main.py
src/algorithms/: __init__.py  baseline.py  ppo.py  reinforce.py
src/env/: __init__.py  evrp_tw_env.py  state.py
src/evrptw/: __init__.py  cli.py  config.py
src/evrptw/baselines/: __init__.py  greedy.py
src/evrptw/core/: __init__.py  instance.py  simulator.py
src/evrptw/data/: __init__.py  generator.py  io.py
src/evrptw/models/: __init__.py  (+2 more)
src/models/: __init__.py  attention_model.py  pointer_network.py  policy_network.py
src/utils/: config.py  data_loader.py  metrics.py  visualization.py
tests/: test_algorithms.py  test_data_loader.py  test_env.py  test_greedy.py  test_instance.py  test_metrics.py  test_models.py  test_policy.py  test_simulator.py
(+2 files in other folders)
