[project]
name = "evrptw-deeprl"
version = "0.1.0"
description = "Research framework for deep reinforcement learning on EVRP-TW."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "matplotlib>=3.8",
    "numpy>=1.26,<3",
    "pandas>=2.2",
    "pyyaml>=6.0",
    "torch>=2.3",
    "tqdm>=4.66",
]

[project.scripts]
evrptw = "evrptw.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "ruff>=0.5",
]
notebook = [
    "ipykernel>=6.29",
    "jupyterlab>=4.2",
    "seaborn>=0.13",
    "tensorboard>=2.17",
]
solver = [
    "ortools>=9.10",
    "pyvrp>=0.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/evrptw"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

